# TelepathyKDEContactlistPlasmoid

./: README
contacts-applet/: A CMakeLists.txt
contacts-dataengine/: CMakeLists.txt  CMakeLists.txt~  README  contacts-dataengine.kdev4  contactsengine.cpp  contactsengine.cpp~  contactsengine.h  contactsengine.h~  plasma-engine-contacts.desktop
contacts-dataengine/.kdev4/: contacts-dataengine.kdev4
contactsapplet/: CMakeLists.txt  CMakeLists.txt~  Messages.sh  README  contactsapplet.cpp  contactsapplet.cpp~  contactsapplet.h  contactsapplet.h~  contactsapplet.kdev4  contactswidget.cpp  contactswidget.h  plasma-applet-contactsapplet.desktop
contactsapplet/.kdev4/: contactsapplet.kdev4
contactsapplet/cmake/.svn/: entries
contactsapplet/cmake/modules/.svn/: entries
